# dinghy-scidata

./: .gitignore  README.md  process.txt  pyproject.toml
scidata/: __init__.py  config.py  console.py  imdb.jsonl
scidata/apps/: Readme.md  __init__.py  movies.py
scidata/openai/: __init__.py  batch.py  chat.py  embeddings.py
