[tool.poetry]
name = "scidata"
version = "0.1.0"
description = ""
authors = ["Saar Wasserman <saarwasserman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.41.1"
pydantic-settings = "^2.4.0"
click = "^8.1.7"

[tool.poetry.scripts]
"scidata" = "scidata.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
