[tool.poetry]
name = "scidata"
version = "0.1.0"
description = ""
authors = ["Saar Wasserman <saarwasserman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.41.1"
pydantic-settings = "^2.4.0"
click = "^8.1.7"
pandas = "^2.2.2"
opensearch-py = "^2.7.1"
requests = "^2.32.3"

[tool.poetry.scripts]
"scidata" = "scidata.console:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
